Fixed social links positioning on Safari 🧭

--- a/_sass/base/_grid-style.scss
+++ b/_sass/base/_grid-style.scss
@@ -110,37 +110,47 @@
       grid-area: skills;
     }
     &.item-social {
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
       grid-area: social;
 
       .social {
         display: grid;
-        flex-grow: 2;
         width: 100%;
+        height: 100%;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
+        grid-template-rows: auto 1fr;
+
+        h2 {
+          grid-column: 1 / 5;
+          place-self: start;
+        }
 
         a {
           @include font-size-rem(30px);
-          align-self: center;
           padding: 10px;
           text-decoration: none;
-          justify-self: center;
+          place-self: center;
         }
 
         @include media('screen', '>=small') {
           grid-template-columns: 1fr 1fr;
-          grid-template-rows: 1fr 1fr;
+          grid-template-rows: auto 1fr 1fr;
+          h2 {
+            grid-column: 1 / 3;
+          }
         }
         @include media('screen', '>=medium') {
           grid-template-columns: 1fr 1fr;
-          grid-template-rows: 1fr 1fr;
+          grid-template-rows: auto 1fr 1fr;
+          h2 {
+            grid-column: 1 / 3;
+          }
         }
         @include media('screen', '>=large') {
           grid-template-columns: 1fr 1fr 1fr 1fr;
-          grid-template-rows: 1fr;
+          grid-template-rows: auto 1fr;
+          h2 {
+            grid-column: 1 / 5;
+          }
         }
       }
     }
